--- a/resources/styles.css
+++ b/resources/styles.css
@@ -122,6 +122,7 @@
 }
 
 /* End serving dashboard */
+
 /* Main score */
 
 #team-one-server-two {
@@ -149,13 +150,20 @@
   fill: coral;
 }
 
-#line {
+#dividing-line {
   x1: 10%;
   y1: 35%;
   x2: 90%;
   y2: 35%;
   fill: white;
   stroke-width: 4;
+}
+
+#server-line {
+  x: 80;
+  y: 55;
+  width: 150;
+  height: 150;
 }
 
 #team-two-server-one {
