Add Winner Screen
HTML updated, currently adding CSS and JS functionality

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -274,3 +274,13 @@
   y: 20%;
   text-anchor: middle;
 }
+
+/* End game text */
+
+#game-end {
+  display: none;
+}
+
+#game-end-winner {
+  display: none;
+}
