--- a/resources/styles.css
+++ b/resources/styles.css
@@ -280,7 +280,23 @@
 #game-end {
   display: none;
   width: 100%;
+  height: 100%;
+  fill: white;
+  x: 0%;
+  y: 0%;
+}
+
+#game-over-text {
   x: 50%;
-  y: 50%;
+  y: 40%;
+  text-anchor: middle;
+}
+
+#game-end-winner {
+  font-size: 50;
+  x: 50%;
+  y: 60%;
+  text-length: 14;
+  text-anchor: middle;
 }
 
