--- a/resources/styles.css
+++ b/resources/styles.css
@@ -4,6 +4,15 @@
 .foreground-fill            { fill: fb-white; }
 .background-fill            { fill: fb-black; }
 
+/* Settings */
+
+#settings-icon {
+  x: 80%;
+  y: 5%;
+  width: 40;
+  height: 40;
+  pointer-events: visible;
+}
 
 /* Launch screen */
 #start-select {
