--- a/resources/styles.css
+++ b/resources/styles.css
@@ -6,6 +6,41 @@
 
 /* Settings */
 
+.list-item {
+  height: 112;
+}
+
+.list-item text {
+  fill: "white";
+  text-anchor: middle;
+  x: 50%;
+  font-size: 24;
+  text-length: 20;
+}
+
+.line {
+  width: 100%;
+  height: 6;
+  fill: #222222;
+  y: 100%-6;
+}
+
+.bg {
+  fill: #111111;
+  width: 100%;
+  height: 100%;
+  x: 0;
+  y: 0;
+}
+
+#touch {
+  width: 100%;
+  height: 100%-6;
+  x: 0;
+  y: 0;
+  opacity: 0;
+}
+
 #settings-icon-container {
   x: 50%;
   y: 0;
@@ -20,6 +55,10 @@
   y: 5%;
   width: 40;
   height: 40;
+}
+
+#settings-menu {
+  display: none;
 }
 
 /* Launch screen */
